--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             <EditText
                 android:id="@+id/teInput"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_span="4" />
         </TableRow>
@@ -45,10 +45,10 @@
             <TextView
                 android:id="@+id/tvResult"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_span="4"
-                android:text="TextView" />
+                android:text="@string/txt0" />
         </TableRow>
 
         <TableRow
