--- a/app/src/main/res/drawable/btn_darkgrey_oval.xml
+++ b/app/src/main/res/drawable/btn_darkgrey_oval.xml
@@ -5,6 +5,7 @@
             <solid android:color="@color/dark_grey"/>
             <size android:width="100dp" android:height="50dp"/>
             <corners android:radius="50dp"/>
+            <stroke android:width="0dp" android:color="@color/black" />
         </shape>
     </item>
 </selector>
