--- a/app/src/main/res/drawable/btn_orange_round.xml
+++ b/app/src/main/res/drawable/btn_orange_round.xml
@@ -4,6 +4,7 @@
         <shape android:shape="oval">
             <solid android:color="@color/orange"/>
             <size android:width="50dp" android:height="50dp"/>
+            <stroke android:width="0dp" android:color="@color/black" />
         </shape>
     </item>
 </selector>
