--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <EditText
-                android:id="@+id/teInput"
+            <TextView
+                android:id="@+id/tvInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
