--- a/app/src/main/res/drawable/btn_darkgrey_oval.xml
+++ b/app/src/main/res/drawable/btn_darkgrey_oval.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/dark_grey"/>
-            <size android:width="100dp" android:height="50dp"/>
-            <corners android:radius="50dp"/>
-            <stroke android:width="0dp" android:color="@color/black" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/dark_grey"/>
+    <size android:width="100dp" android:height="50dp"/>
+    <corners android:radius="50dp"/>
+    <stroke android:width="0dp" android:color="@color/black" />
+</shape>
