--- a/app/src/main/res/drawable/btn_orange_round.xml
+++ b/app/src/main/res/drawable/btn_orange_round.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="@color/orange"/>
-            <size android:width="50dp" android:height="50dp"/>
-            <stroke android:width="0dp" android:color="@color/black" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="@color/orange"/>
+    <size android:width="50dp" android:height="50dp"/>
+    <stroke android:width="0dp" android:color="@color/black" />
+</shape>
